--- a/tests/lib/snaps/test-snapd-after-before-service/meta/snap.yaml
+++ b/tests/lib/snaps/test-snapd-after-before-service/meta/snap.yaml
@@ -2,17 +2,17 @@ name: test-snapd-after-before-service
 version: 1.0
 apps:
   before-middle:
-    command: bin/start
+    command: bin/start before-middle
     daemon: notify
     before:
       - middle
     plugs: [daemon-notify]
   middle:
-    command: bin/start
+    command: bin/start middle
     daemon: notify
     plugs: [daemon-notify]
   after-middle:
-    command: bin/start
+    command: bin/start after-middle
     daemon: notify
     after:
       - middle
