--- a/tests/nested/manual/core20-save/task.yaml
+++ b/tests/nested/manual/core20-save/task.yaml
@@ -2,40 +2,90 @@ summary: Check that ubuntu-save is set up in a UC20 device
 
 description: |
     This test checks that ubuntu-save is preset and set up correctly in a UC20
-    device
+    device or that a device can boot when ubuntu-save is not required
+
+# this is a UC20 specific test
+systems: [ubuntu-20.04-64]
+
+environment:
+  # ubuntu-save, TPM, secure boot
+  NESTED_ENABLE_TPM/encrypted: true
+  NESTED_ENABLE_SECURE_BOOT/encrypted: true
+  NESTED_ADD_UBUNTU_SAVE/encrypted: true
+
+  # add ubuntu-save, but but no TPM or secure boot support
+  NESTED_ENABLE_TPM/plainwithsave: false
+  NESTED_ENABLE_SECURE_BOOT/plainwithsave: false
+  NESTED_ADD_UBUNTU_SAVE/plainwithsave: true
+
+  # no ubuntu-save, no TPM, no secure boot
+  NESTED_ENABLE_TPM/plain: false
+  NESTED_ENABLE_SECURE_BOOT/plain: false
+  NESTED_ADD_UBUNTU_SAVE/plain: false
+
+prepare: |
+    #shellcheck source=tests/lib/nested.sh
+    . "$TESTSLIB/nested.sh"
+
+    # NESTED_ENABLE_TPM and NESTED_ADD_UBUNTU_SAVE are used by build-image
+    "$TESTSTOOLS"/nested-state build-image core
+    # NESTED_ENABLE_TPM is used by create-vm
+    "$TESTSTOOLS"/nested-state create-vm core
 
 execute: |
     #shellcheck source=tests/lib/nested.sh
     . "$TESTSLIB/nested.sh"
 
-    # check that ubuntu-save is mounted and has a reasonable amount of free
-    # space, example df output:
-    # Filesystem                                                   1B-blocks  Used Available Use% Mounted on
-    # /dev/mapper/ubuntu-save-0bed13ef-f71f-418f-b046-b1ce32dd04a7   5079040 28672   4390912   1% /run/mnt/ubuntu-save
-    save_out="$(nested_exec "df -B1 /run/mnt/ubuntu-save | tail -1")"
-    echo "$save_out" | MATCH '^/dev/mapper/ubuntu-save-[0-9a-z-]+\s+'
-    save_size="$(echo "$save_out" | awk '{print $4}')"
-    echo "check  there is at least 6MB of free space available on ubuntu-save"
-    test "$save_size" -gt "$((6*1024*1024))"
+    if [ "$NESTED_ADD_UBUNTU_SAVE" != "true" ] && [ "$NESTED_ENABLE_TPM" != "true" ]; then
+        # no ubuntu-save, make sure the system is up
+        nested_exec "! mountpoint /run/mnt/ubuntu-save"
+        nested_exec "! mountpoint /var/lib/snapd/save"
+    else
+        # check that ubuntu-save is mounted and has a reasonable amount of free
+        # space, example df output:
+        # Filesystem                                                   1B-blocks  Used Available Use% Mounted on
+        # /dev/mapper/ubuntu-save-0bed13ef-f71f-418f-b046-b1ce32dd04a7   5079040 28672   4390912   1% /run/mnt/ubuntu-save
+        save_out="$(nested_exec "df -B1 /run/mnt/ubuntu-save | tail -1")"
+        if [ "$NESTED_ENABLE_TPM" = "true" ]; then
+            # when encrypted, ubuntu-save is mounted from a dm device
+            echo "$save_out" | MATCH '^/dev/mapper/ubuntu-save-[0-9a-z-]+\s+'
+        else
+            # when plain ubuntu-save is mounted from a regular block device
+            echo "$save_out" | MATCH '^/dev/vda[0-9]\s+'
+        fi
+        save_size="$(echo "$save_out" | awk '{print $4}')"
+        echo "check  there is at least 6MB of free space available on ubuntu-save"
+        test "$save_size" -gt "$((6*1024*1024))"
 
-    # leave a canary
-    nested_exec "sudo touch /run/mnt/ubuntu-save/canary"
+        # leave a canary
+        nested_exec "sudo touch /run/mnt/ubuntu-save/canary"
 
-    nested_exec mountpoint /var/lib/snapd/save
-    # we know that save is mounted using a systemd unit
-    nested_exec systemctl status var-lib-snapd-save.mount
-    # and a canary exists
-    nested_exec "test -f /var/lib/snapd/save/canary"
+        nested_exec mountpoint /var/lib/snapd/save
+        # we know that save is mounted using a systemd unit
+        nested_exec systemctl status var-lib-snapd-save.mount
+        # and a canary exists
+        nested_exec "test -f /var/lib/snapd/save/canary"
+    fi
 
     # transition to recovery mode and check again
-    boot_id="$(nested_get_boot_id)"
-    # shellcheck disable=SC2016
-    nested_exec 'sudo snap reboot --recover $(sudo snap recovery | grep -v Label | awk "{print \$1}")'
-    nested_wait_for_reboot "${boot_id}"
-    # verify in recover mode
-    nested_exec 'sudo cat /proc/cmdline' | MATCH snapd_recovery_mode=recover
+    recovery_system=$(nested_exec "sudo snap recovery | grep -v Notes | grep -Po '^[0-9]+'")
+    nested_uc20_transition_to_system_mode "$recovery_system" "recover"
 
-    recover_save_out="$(nested_exec "df -B1 /run/mnt/ubuntu-save | tail -1")"
-    echo "$recover_save_out" | MATCH '^/dev/mapper/ubuntu-save-[0-9a-z-]+\s+'
-    # and a canary exists
-    nested_exec "test -f /run/mnt/ubuntu-save/canary"
+    # happily running in recover mode
+
+    if [ "$NESTED_ADD_UBUNTU_SAVE" != "true" ] && [ "$NESTED_ENABLE_TPM" != "true" ]; then
+        # no ubuntu-save
+        nested_exec "! mountpoint /run/mnt/ubuntu-save"
+        nested_exec "! mountpoint /var/lib/snapd/save"
+    else
+        recover_save_out="$(nested_exec "df -B1 /run/mnt/ubuntu-save | tail -1")"
+        if [ "$NESTED_ENABLE_TPM" = "true" ]; then
+            # when encrypted, ubuntu-save is mounted from a dm device
+            echo "$recover_save_out" | MATCH '^/dev/mapper/ubuntu-save-[0-9a-z-]+\s+'
+        else
+            # when plain ubuntu-save is mounted from a regular block device
+            echo "$recover_save_out" | MATCH '^/dev/vda[0-9]\s+'
+        fi
+        # and a canary exists
+        nested_exec "test -f /run/mnt/ubuntu-save/canary"
+    fi
