--- a/tests/core/netplan/task.yaml
+++ b/tests/core/netplan/task.yaml
@@ -6,9 +6,14 @@ details: |
 environment:
     NETPLAN: io.netplan.Netplan
 
-# the test is only meaningful on core devices
 # TODO:UC20: enable, fails right now with: "The permission of the
-#            setuid helper is not correct"
+#            setuid helper is not correct", the issue is with the permissions of
+#            /usr/lib/dbus-1.0/dbus-daemon-launch-helper - it shows up as not
+#            being in the right group because the /etc/group from the classic
+#            host that we use to prepare the core system has a different group
+#            defined for gid 103 (which on core is messagebus, but on classic is
+#            systemd-network), and thus the dbus daemon thinks it has the wrong
+#            permissions (well basically speaking it does)
 systems: [ubuntu-core-1*]
 
 prepare: |
