--- a/tests/main/cloud-init/task.yaml
+++ b/tests/main/cloud-init/task.yaml
@@ -81,4 +81,6 @@ execute: |
         # checking that it was restricted?
         echo "Test that cloud-init restrict file was written"
         test -f /etc/cloud/cloud.cfg.d/zzzz_snapd.cfg
+        echo "Test that cloud-init restrict file has manual_cache_clean set"
+        MATCH "manual_cache_clean: true" < /etc/cloud/cloud.cfg.d/zzzz_snapd.cfg
     fi
