--- a/tests/main/os.query/task.yaml
+++ b/tests/main/os.query/task.yaml
@@ -57,6 +57,12 @@ execute: |
             not os.query is-core
             os.query is-ubuntu
             ;;
+        ubuntu-2*)
+            os.query is-classic
+            not os.query is-focal
+            not os.query is-core
+            os.query is-ubuntu
+            ;;
         *)
             os.query is-classic
             not os.query is-focal
