--- a/tests/main/fake-netplan-apply/task.yaml
+++ b/tests/main/fake-netplan-apply/task.yaml
@@ -6,23 +6,38 @@ details: |
 environment:
     NETPLAN: io.netplan.Netplan
 
-# don't run on non-ubuntu systems where we won't have netplan
-# and also don't run on ubuntu-core where we can't create the fake netplan D-Bus
-# service
+# only run on ubuntu lts's which match ubuntu core series, we don't run this on
+# core since there we can't setup the fake dbus service, but we have a core
+# specific spread test in tests/core/netplan which uses the real netplan
 systems:
-    - -debian-*
-    - -fedora-*
-    - -ubuntu-14*
-    - -ubuntu-core-*
-    - -opensuse-*
-    - -arch-*
-    - -amazon-*
-    - -centos-*
+    - ubuntu-16.04*
+    - ubuntu-18.04*
+    - ubuntu-20.04*
 
 prepare: |
+    # build the netplan snap for this system
     #shellcheck source=tests/lib/snaps.sh
     . "$TESTSLIB"/snaps.sh
-    snap install test-snapd-netplan-apply --edge
+
+    if os.query is-xenial; then
+        # use no base setting to use effectively "base: core"
+        sed "$TESTSLIB/snaps/netplan-snap/meta/snap.yaml.in" -e "s/base: BASESNAP/# no base snap for core base/" > "$TESTSLIB/snaps/netplan-snap/meta/snap.yaml"
+        snap pack "$TESTSLIB/snaps/netplan-snap" --filename=netplan-snap-16.snap
+        snap install --dangerous netplan-snap-16.snap
+    elif os.query is-bionic; then
+        # use base: core18
+        sed "$TESTSLIB/snaps/netplan-snap/meta/snap.yaml.in" -e "s/base: BASESNAP/base: core18/" > "$TESTSLIB/snaps/netplan-snap/meta/snap.yaml"
+        snap pack "$TESTSLIB/snaps/netplan-snap" --filename=netplan-snap-18.snap
+        snap install --dangerous netplan-snap-18.snap
+    elif os.query is-focal; then
+        # use base: core20
+        sed "$TESTSLIB/snaps/netplan-snap/meta/snap.yaml.in" -e "s/base: BASESNAP/base: core20/" > "$TESTSLIB/snaps/netplan-snap/meta/snap.yaml"
+        snap pack "$TESTSLIB/snaps/netplan-snap" --filename=netplan-snap-20.snap
+        snap install --dangerous netplan-snap-20.snap
+    else
+        echo "new core release, please update test for new ubuntu core version"
+        exit 1
+    fi
 
     # backup the dbus service file and policy config if they exist before 
     # executing
@@ -69,10 +84,10 @@ restore: |
 
 execute: |
     echo "The network-setup-control interface is disconnected by default"
-    snap connections test-snapd-netplan-apply | MATCH 'network-setup-control +test-snapd-netplan-apply:network-setup-control +- +-'
+    snap connections netplan-snap | MATCH 'network-setup-control +netplan-snap:network-setup-control +- +-'
 
     echo "Running netplan apply without network-setup-control fails"
-    if test-snapd-netplan-apply.netplan apply; then
+    if netplan-snap.netplan apply; then
         echo "Expected access denied error for netplan apply"
         exit 1
     fi
@@ -81,10 +96,10 @@ execute: |
     not MATCH "Apply called" < dbus-netplan-apply.log
 
     echo "When the interface is connected"
-    snap connect test-snapd-netplan-apply:network-setup-control
+    snap connect netplan-snap:network-setup-control
 
     echo "Running netplan apply now works"
-    if ! test-snapd-netplan-apply.netplan apply; then
+    if ! netplan-snap.netplan apply; then
         echo "Unexpected error running netplan apply"
         exit 1
     fi
@@ -97,13 +112,13 @@ execute: |
     touch dbus-netplan-apply.log
 
     echo "Disconnecting network-setup-control to test network-setup-observe"
-    snap disconnect test-snapd-netplan-apply:network-setup-control
+    snap disconnect netplan-snap:network-setup-control
 
     echo "The network-setup-observe interface is disconnected by default"
-    snap connections test-snapd-netplan-apply | MATCH 'network-setup-observe +test-snapd-netplan-apply:network-setup-observe +- +-'
+    snap connections netplan-snap | MATCH 'network-setup-observe +netplan-snap:network-setup-observe +- +-'
 
     echo "Running netplan info via D-Bus without network-setup-observe fails"
-    if test-snapd-netplan-apply.info; then
+    if netplan-snap.netplan-info; then
         echo "Expected access denied error for netplan info via D-Bus"
         exit 1
     fi
@@ -112,10 +127,10 @@ execute: |
     not MATCH "Info called" < dbus-netplan-apply.log
 
     echo "When the interface is connected"
-    snap connect test-snapd-netplan-apply:network-setup-observe
+    snap connect netplan-snap:network-setup-observe
 
     echo "Running netplan info via D-Bus now works"
-    if ! test-snapd-netplan-apply.info; then
+    if ! netplan-snap.netplan-info; then
         echo "Unexpected error running netplan info via D-Bus"
         exit 1
     fi
@@ -128,10 +143,10 @@ execute: |
     touch dbus-netplan-apply.log
 
     echo "Disconnecting network-setup-observe to test network-setup-control"
-    snap disconnect test-snapd-netplan-apply:network-setup-observe
+    snap disconnect netplan-snap:network-setup-observe
 
     echo "Running netplan info via D-Bus without network-setup-control fails"
-    if test-snapd-netplan-apply.info; then
+    if netplan-snap.netplan-info; then
         echo "Expected access denied error for netplan info via D-Bus"
         exit 1
     fi
@@ -140,10 +155,10 @@ execute: |
     not MATCH "Info called" < dbus-netplan-apply.log
 
     echo "When the interface is connected"
-    snap connect test-snapd-netplan-apply:network-setup-control
+    snap connect netplan-snap:network-setup-control
 
     echo "Running netplan info via D-Bus now works"
-    if ! test-snapd-netplan-apply.info; then
+    if ! netplan-snap.netplan-info; then
         echo "Unexpected error running netplan info via D-Bus"
         exit 1
     fi
