--- a/tests/core/netplan/task.yaml
+++ b/tests/core/netplan/task.yaml
@@ -17,14 +17,36 @@ environment:
 systems: [ubuntu-core-1*]
 
 prepare: |
-    snap install test-snapd-netplan-apply --edge
+    # build the netplan snap for this system
+    #shellcheck source=tests/lib/snaps.sh
+    . "$TESTSLIB"/snaps.sh
+
+    if os.query is-core16; then
+        # use no base setting to use effectively "base: core"
+        sed "$TESTSLIB/snaps/netplan-snap/meta/snap.yaml.in" -e "s/base: BASESNAP/# no base snap for core base/" > "$TESTSLIB/snaps/netplan-snap/meta/snap.yaml"
+        snap pack "$TESTSLIB/snaps/netplan-snap" --filename=netplan-snap-16.snap
+        snap install --dangerous netplan-snap-16.snap
+    elif os.query is-core18; then
+        # use base: core18
+        sed "$TESTSLIB/snaps/netplan-snap/meta/snap.yaml.in" -e "s/base: BASESNAP/base: core18/" > "$TESTSLIB/snaps/netplan-snap/meta/snap.yaml"
+        snap pack "$TESTSLIB/snaps/netplan-snap" --filename=netplan-snap-18.snap
+        snap install --dangerous netplan-snap-18.snap
+    elif os.query is-core20; then
+        # use base: core20
+        sed "$TESTSLIB/snaps/netplan-snap/meta/snap.yaml.in" -e "s/base: BASESNAP/base: core20/" > "$TESTSLIB/snaps/netplan-snap/meta/snap.yaml"
+        snap pack "$TESTSLIB/snaps/netplan-snap" --filename=netplan-snap-20.snap
+        snap install --dangerous netplan-snap-20.snap
+    else
+        echo "new core release, please update test for new ubuntu core version"
+        exit 1
+    fi
 
 execute: |
     echo "The interface is disconnected by default"
-    snap connections test-snapd-netplan-apply | MATCH 'network-setup-control +test-snapd-netplan-apply:network-setup-control +- +-'
+    snap connections netplan-snap | MATCH 'network-setup-control +netplan-snap:network-setup-control +- +-'
 
     echo "Running netplan apply without network-setup-control fails"
-    if test-snapd-netplan-apply.netplan apply; then
+    if netplan-snap.netplan apply; then
         echo "Expected access denied error for netplan apply"
         exit 1
     fi
@@ -34,10 +56,10 @@ execute: |
     started_before="$("$TESTSTOOLS"/journal-state get-log -u systemd-networkd | grep -c 'Started Network Service.' || true)"
 
     echo "When the interface is connected"
-    snap connect test-snapd-netplan-apply:network-setup-control
+    snap connect netplan-snap:network-setup-control
 
     echo "Running netplan apply now works"
-    if ! test-snapd-netplan-apply.netplan apply; then
+    if ! netplan-snap.netplan apply; then
         echo "Unexpected error running netplan apply"
         exit 1
     fi
@@ -62,22 +84,22 @@ execute: |
     fi
 
     echo "Disconnecting network-setup-control to test network-setup-observe"
-    snap disconnect test-snapd-netplan-apply:network-setup-control
+    snap disconnect netplan-snap:network-setup-control
 
     echo "The network-setup-observe interface is disconnected by default"
-    snap connections test-snapd-netplan-apply | MATCH 'network-setup-observe +test-snapd-netplan-apply:network-setup-observe +- +-'
+    snap connections netplan-snap | MATCH 'network-setup-observe +netplan-snap:network-setup-observe +- +-'
 
     echo "Running netplan info via D-Bus without network-setup-observe fails"
-    if test-snapd-netplan-apply.info; then
+    if netplan-snap.netplan-info; then
         echo "Expected access denied error for netplan info via D-Bus"
         exit 1
     fi
 
     echo "When the interface is connected"
-    snap connect test-snapd-netplan-apply:network-setup-observe
+    snap connect netplan-snap:network-setup-observe
 
     echo "Running netplan info via D-Bus now works"
-    if ! test-snapd-netplan-apply.info; then
+    if ! netplan-snap.netplan-info; then
         echo "Unexpected error running netplan info via D-Bus"
         exit 1
     fi
