--- a/tests/nested/manual/fde-hooks/task.yaml
+++ b/tests/nested/manual/fde-hooks/task.yaml
@@ -1,6 +1,7 @@
 summary: Check that the fde-setup hooks work
 
-system: [ubuntu-20.04-64]
+# this is a UC20 specific test
+systems: [ubuntu-20.04-64]
 
 environment:
     NESTED_IMAGE_ID: core20-fde-setup
