--- a/tests/main/lxd-mount-units/task.yaml
+++ b/tests/main/lxd-mount-units/task.yaml
@@ -5,8 +5,7 @@ details: |
     are correct for snapfuse.
 
 # only 20.04+, we want lxd images that come with snaps preinstalled.
-# TODO: enable for ubuntu-21.04-64 when the ñxd image is available
-systems: [ubuntu-2*, -ubuntu-21.04-64]
+systems: [ubuntu-2*]
 
 execute: |
     echo "Install lxd"
@@ -24,6 +23,10 @@ execute: |
     fi
 
     VERSION_ID="$(. /etc/os-release && echo "$VERSION_ID" )"
+    # TODO: enable for ubuntu-21.04-64 when the image is available
+    if [ "$VERSION_ID" = "21.04" ]; then
+        VERSION_ID="20.10"
+    fi
     lxd.lxc launch --quiet "ubuntu:$VERSION_ID" ubuntu
 
     echo "Setting up proxy *inside* the container"
