--- a/tests/main/lxd/task.yaml
+++ b/tests/main/lxd/task.yaml
@@ -3,8 +3,7 @@ summary: Ensure that lxd works
 # Only run this on ubuntu 16+, lxd will not work on !ubuntu systems
 # currently nor on ubuntu 14.04
 # TODO: enable for ubuntu-16-32 again
-# TODO: enable for ubuntu-21.04-64 when the ñxd image is available
-systems: [ubuntu-16*, ubuntu-18*, ubuntu-2*, ubuntu-core-*, -ubuntu-21.04-64]
+systems: [ubuntu-16*, ubuntu-18*, ubuntu-2*, ubuntu-core-*]
 
 # autopkgtest run only a subset of tests that deals with the integration
 # with the distro
@@ -91,6 +90,10 @@ execute: |
     # my-nesting-ubuntu nesting container
 
     VERSION_ID="$(. /etc/os-release && echo "$VERSION_ID" )"
+    # TODO: enable for ubuntu-21.04-64 when the image is available
+    if [ "$VERSION_ID" = "21.04" ]; then
+        VERSION_ID="20.10"
+    fi
     lxd.lxc launch --quiet "ubuntu:$VERSION_ID" my-ubuntu
     lxd.lxc launch --quiet "ubuntu:$VERSION_ID" my-nesting-ubuntu -c security.nesting=true
     if [ "$(uname -m)" = x86_64 ] && lxd.lxc info my-ubuntu | grep "Architecture: i686"; then
