--- a/tests/main/snapshot-basic/task.yaml
+++ b/tests/main/snapshot-basic/task.yaml
@@ -77,14 +77,16 @@ execute: |
     echo "And is valid"
     snap check-snapshot "$RESTORE_ID"
 
-    echo "But import again will not work"
-    not snap import-snapshot "${SET_ID}_export.snapshot" 2>output.txt
-    tr -s '\n' ' ' < output.txt | MATCH "already availalble as snapshot id $RESTORE_ID"
+    NUM_SAVED=$(snap saved | wc -l)
+
+    echo "Import again doesn't create a duplicated snapshot"
+    IMPORTED_ID=$( snap import-snapshot "${SET_ID}_export.snapshot" | head -n1 | cut -f2 -d'#' )
+    [[ "$RESTORE_ID" == "$IMPORTED_ID" ]]
+    [[ "$NUM_SAVED" == $(snap saved | wc -l) ]]
 
     # remove the exports and import
     rm "${SET_ID}"_export*.snapshot
     snap forget "$RESTORE_ID"
-
 
     # check automatic snapshot can be disabled
     snap set core snapshots.automatic.retention=no
