--- a/.github/workflows/nested-tag.yaml
+++ b/.github/workflows/nested-tag.yaml
@@ -10,8 +10,8 @@ jobs:
   tag-pr:
     runs-on: ubuntu-16.04
     steps:
-      - name: Tag pull request
-        uses: actions-ecosystem/action-add-labels@v1
+      - uses: actions/checkout@v2
+      - uses: actions-ecosystem/action-add-labels@v1
         if: "!(contains(github.event.pull_request.labels.*.name, 'Run nested'))"
         with:
           github_token: ${{ secrets.github_token }}
