--- a/.github/workflows/labeler.yaml
+++ b/.github/workflows/labeler.yaml
@@ -1,7 +1,7 @@
 name: "Pull Request Labeler"
 on:
   pull_request_target:
-    branches: [ "master", "release/**" ]
+    types: [opened, reopened, edited, synchronize]
 
 jobs:
   triage:
