--- a/.github/workflows/labeler.yaml
+++ b/.github/workflows/labeler.yaml
@@ -1,5 +1,7 @@
 name: "Pull Request Labeler"
 on:
+  pull_request:
+    branches: [ "master", "release/**" ]
   pull_request_target:
     types: [opened, reopened, edited, synchronize]
 
