--- a/.github/workflows/labeler.yaml
+++ b/.github/workflows/labeler.yaml
@@ -1,13 +1,10 @@
 name: "Pull Request Labeler"
 on:
-  pull_request:
-    branches: [ "master", "release/**" ]
-  pull_request_target:
-    types: [opened, reopened, edited, synchronize]
+- pull_request_target
 
 jobs:
   triage:
-    runs-on: ubuntu-16.04
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/labeler@main
       with:
